--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
+:root {
+    --white: hsl(0, 0%, 100%);
+    --light-gray: hsl(212, 45%, 89%);
+    --grayish-blue: hsl(220, 15%, 55%);
+    --dark-blue: hsl(218, 44%, 22%);
+}
+
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-size: 15px;
 }
 
 .attribution { 
