--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,68 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     font-size: 15px;
     font-family: "Outfit", sans-serif;
+    background-color: var(--light-gray);
+    text-align: center;
 }
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    min-height: 100%;
+}
+
+.card {
+    background-color: var(--white);
+    border-radius: 15px;
+    overflow: hidden;
+    width: 30%;
+}
+
+img {
+    border-radius: 15px;;
+}
+
+.card-content {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+}
+
+h1 {
+    font-weight: 700;
+    margin: 15px;
+}
+
+.card p {
+    font-weight: 400;
+    color: var(--grayish-blue);
+    margin: 15px;
+}
+
+@media only screen and (max-width: 800px) {
+    .card {
+        width: 90%;
+        margin: 5%;
+    }
+    .card-text {
+        padding: 0;
+        margin: 0;
+    }
+} 
+
+/* FOOTER */
 
 .attribution { 
     font-size: 11px; text-align: center; 
